--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="shortcut" href="img/shortcut_120284.ico" href="image/x-icon"/>
   <title>Whatsapp Clone</title>
 </head>
 
